force-app/main/default/objects/Goals__c/Goals__c.object-meta.xml
<CustomObject>
    <description>Performance Management Goals Record for V2R Process</description>
    <label>Goal</label>
    <nameField>
        <displayFormat>GOL{000000}</displayFormat>
        <label>Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>