force-app/main/default/objects/Goals__c/fields/AO_Goal_1__c.field-meta.xml
<CustomField>
    <fullName>AO_Goal_1__c</fullName>
    <label>Goal 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>