force-app/main/default/objects/Goals__c/fields/AO_Goal_2__c.field-meta.xml
<CustomField>
    <fullName>AO_Goal_2__c</fullName>
    <label>Goal 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>