force-app/main/default/objects/Goals__c/fields/DC_Metric_1__c.field-meta.xml
<CustomField>
    <fullName>DC_Metric_1__c</fullName>
    <label>Metric 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>