force-app/main/default/objects/Goals__c/fields/Job_Title_Static__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Static__c</fullName>
    <label>Job Title (Static)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>