force-app/main/default/objects/Goals__c/fields/Manager_G100C__c.field-meta.xml
<CustomField>
    <fullName>Manager_G100C__c</fullName>
    <inlineHelpText>Manager that will receive your V2R records and provide feedback.</inlineHelpText>
    <label>Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allen, Marc</fullName>
            </value>
            <value>
                <fullName>Burke, Ashley</fullName>
            </value>
            <value>
                <fullName>Houser, Dan</fullName>
            </value>
            <value>
                <fullName>Madden, Tricia</fullName>
            </value>
            <value>
                <fullName>Makhmali, Nika</fullName>
            </value>
            <value>
                <fullName>Niles, David</fullName>
            </value>
            <value>
                <fullName>Oka, Aparna</fullName>
            </value>
            <value>
                <fullName>Schiele, Kim</fullName>
            </value>
            <value>
                <fullName>Silvers, Jennifer</fullName>
            </value>
            <value>
                <fullName>Thangavelsamy, Raj</fullName>
            </value>
            <value>
                <fullName>Meil, Jason</fullName>
            </value>
            <value>
                <fullName>Miller, Scott</fullName>
            </value>
            <value>
                <fullName>Randeria, Sonal</fullName>
            </value>
            <value>
                <fullName>Lambert, Eddie</fullName>
            </value>
            <value>
                <fullName>Rodgers, John</fullName>
            </value>
            <value>
                <fullName>Kathleen Pangier</fullName>
            </value>
            <value>
                <fullName>Pangier, Kathleen</fullName>
            </value>
            <value>
                <fullName>Muhota, Kim</fullName>
            </value>
            <value>
                <fullName>Brun, Les</fullName>
                <isActive>false</isActive>
                <label>Brun, Les</label>
            </value>
            <value>
                <fullName>Fuente, David</fullName>
                <isActive>false</isActive>
                <label>Fuente, David</label>
            </value>
            <value>
                <fullName>Kaufmann, Julian</fullName>
                <isActive>false</isActive>
                <label>Kaufmann, Julian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>