force-app/main/default/objects/Goals__c/fields/Managing_Director_User__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Director (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Goals1</relationshipName>
    <type>Lookup</type>
</CustomField>