force-app/main/default/objects/Goals__c/fields/MD_Approved__c.field-meta.xml
<CustomField>
    <fullName>MD_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD Approved</label>
    <type>Checkbox</type>
</CustomField>