force-app/main/default/objects/Goals__c/fields/MD_Record__c.field-meta.xml
<CustomField>
    <fullName>MD_Record__c</fullName>
    <formula>OR(Owner:User.Id = &quot;005F0000005Os4F&quot;,
Owner:User.Id = &quot;005F0000002tkLv&quot;,
Owner:User.Id = &quot;005F0000005OxoD&quot;,
Owner:User.Id = &quot;005F0000005NOvB&quot;,
Owner:User.Id = &quot;005F0000002tkLm&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Record</label>
    <type>Checkbox</type>
</CustomField>