force-app/main/default/objects/Goals__c/fields/New_Mid_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Mid_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Mid Year Test</label>
    <type>Checkbox</type>
</CustomField>