force-app/main/default/objects/Goals__c/fields/Performance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead__c</fullName>
    <inlineHelpText>Performance Lead that will receive your V2R records and provide feedback.</inlineHelpText>
    <label>Performance Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dix, Wayne</fullName>
            </value>
            <value>
                <fullName>Evans, Sharlene</fullName>
            </value>
            <value>
                <fullName>Kramer, Nick</fullName>
            </value>
            <value>
                <fullName>Miller, David</fullName>
            </value>
            <value>
                <fullName>Rodgers, John</fullName>
            </value>
            <value>
                <fullName>Sachdeva, Sachin</fullName>
            </value>
            <value>
                <fullName>Silvers, Bob</fullName>
            </value>
            <value>
                <fullName>Thangavelsamy, Raj</fullName>
            </value>
            <value>
                <fullName>Asbeck, Fred</fullName>
            </value>
            <value>
                <fullName>Burke, Ashley</fullName>
            </value>
            <value>
                <fullName>Brown, Reuben</fullName>
            </value>
            <value>
                <fullName>Krajacic, Jeff</fullName>
            </value>
            <value>
                <fullName>Makhmali, Nika</fullName>
            </value>
            <value>
                <fullName>Katz, Matt</fullName>
            </value>
            <value>
                <fullName>Ashcroft, Paul</fullName>
                <isActive>false</isActive>
                <label>Ashcroft, Paul</label>
            </value>
            <value>
                <fullName>Bloomfield, Jon</fullName>
                <isActive>false</isActive>
                <label>Bloomfield, Jon</label>
            </value>
            <value>
                <fullName>Costa, Rafael</fullName>
                <isActive>false</isActive>
                <label>Costa, Rafael</label>
            </value>
            <value>
                <fullName>Covelli, John</fullName>
                <isActive>false</isActive>
                <label>Covelli, John</label>
            </value>
            <value>
                <fullName>Giessler, Paul</fullName>
                <isActive>false</isActive>
                <label>Giessler, Paul</label>
            </value>
            <value>
                <fullName>Homann, Stefan</fullName>
                <isActive>false</isActive>
                <label>Homann, Stefan</label>
            </value>
            <value>
                <fullName>Kaiser, Thomas</fullName>
                <isActive>false</isActive>
                <label>Kaiser, Thomas</label>
            </value>
            <value>
                <fullName>Lawrence, Chuck</fullName>
                <isActive>false</isActive>
                <label>Lawrence, Chuck</label>
            </value>
            <value>
                <fullName>Madigan, Joseph</fullName>
                <isActive>false</isActive>
                <label>Madigan, Joseph</label>
            </value>
            <value>
                <fullName>Marves, Gary</fullName>
                <isActive>false</isActive>
                <label>Marves, Gary</label>
            </value>
            <value>
                <fullName>Meil, Jason</fullName>
                <isActive>false</isActive>
                <label>Meil, Jason</label>
            </value>
            <value>
                <fullName>Niles, Arthur</fullName>
                <isActive>false</isActive>
                <label>Niles, Arthur</label>
            </value>
            <value>
                <fullName>Ponder, Alison</fullName>
                <isActive>false</isActive>
                <label>Ponder, Alison</label>
            </value>
            <value>
                <fullName>Reed, Rodney</fullName>
                <isActive>false</isActive>
                <label>Reed, Rodney</label>
            </value>
            <value>
                <fullName>Sanders, Regenia</fullName>
                <isActive>false</isActive>
                <label>Sanders, Regenia</label>
            </value>
            <value>
                <fullName>Yan, Roger</fullName>
                <isActive>false</isActive>
                <label>Yan, Roger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>