force-app/main/default/objects/Goals__c/fields/Performance_Lead_User__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by workflow, based on Performance Lead Picklist.</description>
    <label>Performance Lead (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>