force-app/main/default/objects/Goals__c/fields/PL_Approved__c.field-meta.xml
<CustomField>
    <fullName>PL_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PL Approved</label>
    <type>Checkbox</type>
</CustomField>