force-app/main/default/objects/Goals__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(AND(RecordTypeId  = &quot;0122A000001QFOC&quot;, Submitted__c = TRUE,  PL_Approved__c = FALSE, MD_Approved__c = FALSE), &quot;Pending PL Approval&quot;, 
IF(AND(RecordTypeId  = &quot;0122A000001QFOC&quot;, Submitted__c = TRUE,  PL_Approved__c = TRUE, MD_Approved__c = FALSE), &quot;Pending MD Approval&quot;, 
IF(AND(RecordTypeId  = &quot;0122A000001QFOC&quot;, Submitted__c = TRUE,  PL_Approved__c = TRUE, MD_Approved__c = TRUE), &quot;Approved&quot;,

IF(AND(RecordTypeId  = &quot;0122A000001QFOH&quot;, Submitted__c = TRUE,  PL_Approved__c = FALSE, MD_Approved__c = FALSE), &quot;Pending Manager Approval&quot;, 
IF(AND(RecordTypeId  = &quot;0122A000001QFOH&quot;, Submitted__c = TRUE,  PL_Approved__c = TRUE, MD_Approved__c = FALSE), &quot;Pending Function Lead Approval&quot;, 
IF(AND(RecordTypeId  = &quot;0122A000001QFOH&quot;, Submitted__c = TRUE,  PL_Approved__c = TRUE, MD_Approved__c = TRUE), &quot;Approved&quot;,

&quot;Draft&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>