force-app/main/default/objects/Goals__c/fields/V2R_Year__c.field-meta.xml
<CustomField>
    <fullName>V2R_Year__c</fullName>
    <inlineHelpText>Year of the corresponding V2R process.</inlineHelpText>
    <label>V2R Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>