force-app/main/default/objects/Goals__c/recordTypes/G100C.recordType-meta.xml
<RecordType>
    <fullName>G100C</fullName>
    <active>true</active>
    <description>G100C</description>
    <label>G100C</label>
</RecordType>