force-app/main/default/objects/Goals__c/recordTypes/SSA.recordType-meta.xml
<RecordType>
    <fullName>SSA</fullName>
    <active>true</active>
    <description>SSA</description>
    <label>SSA</label>
</RecordType>