force-app/main/default/objects/Goals__c/recordTypes/SSAPL.recordType-meta.xml
<RecordType>
    <fullName>SSAPL</fullName>
    <active>true</active>
    <label>SSA PL</label>
</RecordType>