force-app/main/default/objects/Goals__c/validationRules/G100C_Manager_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>G100C_Manager_Required</fullName>
    <active>true</active>
    <description>Manager required for G100C record type.</description>
    <errorConditionFormula>AND(
RecordTypeId = &quot;0122A000001QFOH&quot; , 
ISPICKVAL(Manager_G100C__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please select a Manager.</errorMessage>
</ValidationRule>