force-app/main/default/objects/Goals__c/validationRules/SSA_PL_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SSA_PL_Required</fullName>
    <active>true</active>
    <description>PL required for SSA record type</description>
    <errorConditionFormula>AND(RecordTypeId = &quot;0122A000001QFOC&quot; ,  ISPICKVAL(Performance_Lead__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please select a Performance Lead.</errorMessage>
</ValidationRule>