force-app/main/default/objects/Goals__c/listViews/My_Goals.listView-meta.xml
<ListView>
    <fullName>My_Goals</fullName>
    <columns>NAME</columns>
    <columns>V2R_Year__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Goals</label>
</ListView>